<resources>
    <string name="app_name">Peering Byakugan</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="cars">Cars</string>
    <string name="comedy">Comedy</string>
    <string name="dementia">Dementia</string>
    <string name="demons">Demons</string>
    <string name="mystery">Mystery</string>
    <string name="drama">Drama</string>
    <string name="ecchi">Ecchi</string>
    <string name="fantasy">Fantasy</string>
    <string name="game">Game</string>
    <string name="hentai">Hentai</string>
    <string name="martial_arts">Martial Arts</string>
    <string name="magic">Magic</string>
    <string name="kids">Kids</string>
    <string name="horror">Horror</string>
    <string name="historical">Historical</string>
    <string name="romance">Romance</string>
    <string name="samurai">Samurai</string>
    <string name="parody">Parody</string>
    <string name="music">Music</string>
    <string name="mecha">Mecha</string>
    <string name="shounen_ai">Shounen Ai</string>
    <string name="shounen">Shounen</string>
    <string name="shoujo_ai">Shoujo Ai</string>
    <string name="shoujo">Shoujo</string>
    <string name="sci_fi">Sci Fi</string>
    <string name="school">School</string>
    <string name="josei">Josei</string>
    <string name="seinen">Seinen</string>
    <string name="thriller">Thriller</string>
    <string name="psycological">Psycological</string>
    <string name="police">Police</string>
    <string name="military">Military</string>
    <string name="supernatural">Supernatural</string>
    <string name="slice_of_life">Slice of Life</string>
    <string name="harem">Harem</string>
    <string name="yuri">Yuri</string>
    <string name="yaoi">Yaoi</string>
    <string name="vampire">Vampire</string>
    <string name="super_power">Super Power</string>
    <string name="sports">Sports</string>
    <string name="space">Space</string>
    <string name="action_search">Search</string>
    <string name="search_query_hint">Should be at least 3 characters</string>
    <string name="synopsis">Synopsis: \n\n\t%s</string>
    <string name="none_found_error_message">Sorry, there are no anime that\nmatch your specified criteria</string>
    <string name="initial_message">Give it a whirl!</string>
    <string name="episodes">No of episodes: %s</string>
    <string name="status">Current status: %s</string>
    <string name="ratings">Rating: %s</string>
    <string name="premier_date">Premiered: %s</string>
    <string name="error_internet">Please check your internet connection</string>
    <string name="about">About</string>
    <string name="currently_airing">Currently Airing</string>
    <string name="overflow">⋮</string>
    <string name="bookmark">Bookmark</string>
    <string name="not_applicable">N/A</string>
    <string name="insufficient_internet_error">Sorry, the internet connection\n   seems to be a bit slow</string>
    <string name="minimum_score">Minimum rating</string>
    <string name="characters">Characters</string>
    <string name="filters">filters</string>
    <string name="order_by">Order By</string>

    <string name="channel_name">reminder channel</string>
    <string name="channel_description">reminder notifications</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="favourite">Favourite</string>
    <string name="character_about">About: \n\n%s</string>
    <string name="nickname">Nickname(s): %s</string>
    <string name="kanji">Kanji: %s</string>
    <string name="favourites">Favourites</string>
    <string name="remove">Remove</string>
    <string name="no_favourite_anime">You have no favourite anime? Really?</string>
    <string name="your_bookmarks_are_empty">Your bookmarks are empty :|</string>
    <string name="sorry_this_anime_s_info_n_coulddn_t_be_retireved">Sorry, this anime\'s info\n  couldn\'t be retrieved</string>
    <string name="sorry_couldn_t_retrieve_characters">Sorry, couldn\'t retrieve characters</string>
    <string name="about_statement">Peering Byakugan\n\n This app is designed to allow the total exploration of the animeverse.
    It helps you keep up with the latest anime, bookmark them and receive notifications when a new episode is released.
    You get to browse through the animeverse\-\-with a flurry of filters to fine tune your exploring needs\-\-exploring each anime thoroughly; accessing trailers, synopses and detailed descriptions of the characters.
    \n\nP.S: With regards to the reminder notifications, All reminders for each anime will be accurate provided its air day has never been changed</string>
    <string name="night_mode">Night Mode</string>
</resources>
