<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".HomeFragment">


        <HorizontalScrollView android:layout_width="match_parent" android:layout_height="wrap_content"
                              app:layout_constraintTop_toTopOf="parent"
                              android:scrollbars="none"
                              android:id="@+id/chipsScrollView"
                              app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.chip.ChipGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/filterChipGroup"
                    app:singleLine="true"
                    android:padding="8dp">

                <com.google.android.material.chip.Chip
                        android:text="@string/action"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/adventure"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/cars"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/comedy"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/dementia"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/demons"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/mystery"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/drama"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/ecchi"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/fantasy"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/game"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/hentai"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/historical"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/horror"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/kids"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/magic"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/martial_arts"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/mecha"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/music"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/parody"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/samurai"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/romance"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/school"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/sci_fi"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/shoujo"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/shoujo_ai"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/shounen"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/shounen_ai"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/space"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/sports"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/super_power"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/vampire"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/yaoi"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/yuri"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/harem"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/slice_of_life"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/supernatural"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/military"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/police"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/psycological"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/thriller"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/seinen"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>

                <com.google.android.material.chip.Chip
                        android:text="@string/josei"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/Widget.MaterialComponents.Chip.Filter"/>


            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView android:layout_width="0dp"
                                                   android:layout_height="0dp"
                                                   tools:listitem="@layout/item_layout"
                                                   android:id="@+id/animeListRecyclerView"
                                                   app:layout_constraintStart_toStartOf="parent"
                                                   app:layout_constraintTop_toBottomOf="@id/chipsScrollView"
                                                   app:layout_constraintBottom_toBottomOf="parent"
                                                   app:layout_constraintEnd_toEndOf="parent"/>


        <ProgressBar android:layout_width="42dp" android:layout_height="42dp"
                     app:layout_constraintTop_toTopOf="@id/animeListRecyclerView"
                     app:layout_constraintStart_toStartOf="@id/animeListRecyclerView"
                     app:layout_constraintBottom_toBottomOf="@id/animeListRecyclerView"
                     app:layout_constraintEnd_toEndOf="@id/animeListRecyclerView"
                     android:visibility="invisible"
                     android:id="@+id/animeListProgressBar"/>


        <LinearLayout android:layout_width="0dp"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintEnd_toEndOf="parent"
                      android:id="@+id/errorView"
                      app:layout_constraintTop_toTopOf="parent"
                      android:orientation="vertical"
                      app:layout_constraintBottom_toBottomOf="parent"
                      android:layout_height="wrap_content">

            <ImageView android:layout_width="200dp" android:layout_height="100dp"
                       android:layout_gravity="center_horizontal"
                       android:src="@drawable/error"
                       android:padding="16dp"
            />
            <TextView android:layout_width="wrap_content"
                      android:id="@+id/errorTextView"
                      android:text="@string/initial_message"
                      android:layout_gravity="center_horizontal"
                      android:fontFamily="@font/roboto_italic"
                      android:textAppearance="?android:textAppearanceMedium"
                      android:textColor="@android:color/black"
                      android:layout_height="wrap_content"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>