<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content">

    <ImageView android:layout_width="wrap_content"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               android:id="@+id/navHeaderImage"
               android:scaleType="centerCrop"
               android:src="@drawable/nav_header_image"
               android:layout_height="200dp"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:textAppearance="?android:textAppearanceSmall"
              android:text="@string/currently_airing"
              android:layout_margin="8dp"
              android:id="@+id/scheduleTextView"
              android:fontFamily="sans-serif"
              android:textColor="@android:color/black"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@id/navHeaderImage"/>

    <Spinner android:layout_width="wrap_content" android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginStart="8dp"
             android:id="@+id/daySpinner"
             app:layout_constraintTop_toBottomOf="@id/scheduleTextView"
             app:layout_constraintStart_toStartOf="parent"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toBottomOf="@id/daySpinner"
              android:textAppearance="?android:attr/textAppearanceMedium"
              android:text="@string/filters"
              android:layout_marginStart="8dp"
              android:layout_marginEnd="8dp"
              android:textColor="@android:color/black"
              android:id="@+id/filterHeader"
              android:textAllCaps="true"
              android:layout_marginTop="32dp"
              app:layout_constraintStart_toStartOf="parent"/>


    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:textAppearance="?android:textAppearanceSmall"
              android:text="@string/minimum_score"
              android:layout_marginStart="8dp"
              android:layout_marginEnd="8dp"
              android:id="@+id/enterRatingsTextView"
              android:fontFamily="sans-serif"
              android:textColor="@android:color/black"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginTop="16dp"
              app:layout_constraintTop_toBottomOf="@id/filterHeader"/>

    <SeekBar android:layout_width="0dp" android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:inputType="numberDecimal"
             android:id="@+id/scoreSeekBar"
             app:layout_constraintTop_toBottomOf="@id/enterRatingsTextView"
             app:layout_constraintEnd_toEndOf="@id/daySpinner"
             app:layout_constraintStart_toStartOf="parent"/>


    <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            tools:text="20"
            android:textColor="@android:color/black"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/currentScoreTextView"
            app:layout_constraintTop_toTopOf="@id/scoreSeekBar"
            app:layout_constraintBottom_toBottomOf="@id/scoreSeekBar"
            app:layout_constraintStart_toEndOf="@id/scoreSeekBar"
            android:layout_marginStart="4dp"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceSmall"
              app:layout_constraintTop_toBottomOf="@id/scoreSeekBar"
              android:layout_marginTop="16dp"
              android:layout_marginStart="8dp"
              android:layout_marginEnd="8dp"
              android:text="@string/order_by"
              app:layout_constraintStart_toStartOf="parent"
              android:id="@+id/orderByTextView"
              android:textColor="@android:color/black"/>

    <Spinner android:layout_width="0dp" android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/orderByTextView"
             android:layout_marginTop="4dp"
             android:id="@+id/orderBySpinner"
             android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="@id/daySpinner"/>


</androidx.constraintlayout.widget.ConstraintLayout>